# libpata

./: .gitignore  CMakeLists.txt  README.md
libpata/: CMakeLists.txt
libpata/include/: pata_backend.h  pata_commands.h  pata_debug.h  pata_errors.h  pata_memory.h  pata_operator.h  pata_stream.h  pata_tensor.h  pata_tensor_impl.h  pata_types.h  pata_utils.h
libpata/src/: pata_backend.cpp  pata_commands.cpp  pata_memory.cpp  pata_operator.cpp  pata_tensor.cpp
libpata/src/backends/: cpu_backend.h
libpata/src/backends/cpu/: cpu_backend.cpp  cpu_commands.cpp  cpu_commands.h  cpu_stream.h
libpata/src/utils/: pata_debug.cpp  pata_debug.h  pata_stream_pool.h  pata_threads.cpp  pata_threads.h
libtosa/: CMakeLists.txt
libtosa/include/: tosa_backend.h  tosa_commands.h  tosa_errors.h  tosa_memory.h  tosa_operator.h  tosa_stream.h  tosa_tensor impl.h  tosa_tensor.h  tosa_tensor_impl.h  tosa_types.h  tosa_utils.h
libtosa/src/: libmain.cpp  tosa_backend.cpp  tosa_commands.cpp  tosa_memory.cpp  tosa_operator.cpp  tosa_stream.cpp  tosa_tensor.cpp
libtosa/src/backends/: cpu_backend.cpp  cpu_backend.h
libtosa/src/backends/cpu/: cpu_backend.cpp  cpu_commands.cpp  cpu_commands.h  cpu_stream.h
libtosa/src/utils/: tosa_stream_pool.h
libxla/: CMakeLists.txt
libxla/include/: xla_backend.h  xla_commands.h  xla_errors.h  xla_memory.h  xla_operator.h  xla_stream.h  xla_tensor.h  xla_tensor_impl.h  xla_types.h  xla_utils.h
libxla/src/: xla_backend.cpp  xla_commands.cpp  xla_memory.cpp  xla_operator.cpp  xla_tensor.cpp
libxla/src/backends/: cpu_backend.h
libxla/src/backends/cpu/: cpu_backend.cpp  cpu_commands.cpp  cpu_commands.h  cpu_stream.h
libxla/src/utils/: xla_stream_pool.h
test/: CMakeLists.txt  main.cpp  test_operations.cpp  test_parallel.cpp  test_tensors.cpp
